hardcode bug fix the scroll bar is adding 4px of shigt contnet so i user margin and need to hide the overflow in the x axis so antoher scroll wouldnt appear in the bottom of the container, not the best fix but it was what i found that works

--- a/src/styles/components/collapseSidebar.css
+++ b/src/styles/components/collapseSidebar.css
@@ -57,12 +57,31 @@ body .collapsed-sidebar .listsView {
 	flex-direction: column !important;
 	align-items: center !important;
 }
+body .collapsed-sidebar .listsView:hover{
+    .listItem{
+        margin-left: 4px;
+    }
+    overflow-x: hidden;
+}
+body .collapsed-sidebar .listsView:hover::-webkit-scrollbar{
+    width: 4px;
+}
 
 /* List items */
 body .collapsed-sidebar .listItem {
-	width: 40px !important;
+	width: 100% !important;
 	display: flex !important;
 	justify-content: center !important;
+}
+body .collapsed-sidebar .listItem:hover{
+    background-color: transparent;
+}
+.collapsed-sidebar .listItemEditBtn{
+    width: 20px;
+    height: 20px;
+}
+.collapsed-sidebar .listItemColorDisplay {
+    grid-column: 1 / -1; /* Span all columns */
 }
 
 /* Hide list item text names */
